Add edit users template

--- a/authorities/templates/authorities/authority_list.html
+++ b/authorities/templates/authorities/authority_list.html
@@ -3,7 +3,12 @@
 {% block content %}
 <ul>
 {% for a in authorities %}
-    <li>{{ a }} <a href='{% url "authority_update" a.id %}'>Edit</a></li>
+    <li>{{ a }} 
+        <a href='{% url "authority_view" a.id %}'>View</a>
+        <a href='{% url "authority_update" a.id %}'>Edit</a>
+        
+        <a href='{% url "authority_update_users" a.id %}'>Edit users</a>
+    </li>
 {% endfor %}
 </ul>
 {% endblock %}
