--- a/authorities/templates/authorities/authority_detail.html
+++ b/authorities/templates/authorities/authority_detail.html
@@ -2,4 +2,10 @@
 
 {% block content %}
 {{ authority }}
+<h3>Users</h3>
+{% for u in authority.users.all %}
+    {{ u }}
+{% empty %}
+    None!
+{% endfor %}
 {% endblock %}
