--- a/authorities/templates/authorities/authority_detail.html
+++ b/authorities/templates/authorities/authority_detail.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
+{% load i18n %}
+
+{% block page_title %}{% trans "Authority detail" %}{% endblock %}
 
 {% block content %}
 {{ authority }}
-<h3>Users</h3>
+<h3>{% trans "Users" %}</h3>
 {% for u in authority.users.all %}
     {{ u }}
 {% empty %}
-    None!
+    {% trans "No users" %}
 {% endfor %}
+
 {% endblock %}
