--- a/authorities/templates/authorities/authority_form.html
+++ b/authorities/templates/authorities/authority_form.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
+{% load i18n %}
+
+{% block page_title %}{% trans "Authority form" %}{% endblock %}
 
 {% block content %}
 <form method='POST'>
     {% csrf_token %}
     {{ form }}
-    <input type='submit' value='Submit' />
+    <input type='submit' value='{% trans "Submit" %}' />
 </form>
 {% endblock %}
